Doc: adapt code to use API data v1
Follow the changes done in
https://github.com/readthedocs/readthedocs.org/pull/11205

--- a/Doc/tools/templates/layout.html
+++ b/Doc/tools/templates/layout.html
@@ -42,7 +42,7 @@
     </style>
 {{ super() }}
 
-<meta name="readthedocs-addons-api-version" content="0">
+<meta name="readthedocs-addons-api-version" content="1">
 <script type="text/javascript">
  function onSwitch(event) {
      const option = event.target.selectedIndex;
@@ -51,49 +51,48 @@
  }
 
  document.addEventListener("readthedocs-addons-data-ready", function(event) {
-     const config = event.detail;
-     const languageMapping = {
-         en: "English",
-         es: "Spanish",
-         // ...
-     }
+     event.detail.initialize();
+     event.detail.data().then((config) => {
+        // TODO: add `selected="selected"` to option
+        const versionSelect = `
+        <select id="version_select">
+        ${ config.versions.active.map(
+            (version) => `
+            <option
+                value="${ version.slug }"
+                ${ config.versions.current.slug === version.slug ? 'selected="selected"' : '' }
+                data-url="${ version.urls.documentation }">
+                ${ version.slug }
+            </option>`
+        ).join("\n") }
+        </select>
+        `;
 
-     // TODO: add `selected="selected"` to option
-     const versionSelect = `
-     <select id="version_select">
-     ${ config.addons.flyout.versions.map(
-         (version) => `
-           <option
-               value="${ version.slug }"
-               ${ config.versions.current.slug === version.slug ? 'selected="selected"' : '' }
-               data-url="${ version.url }">
-               ${ version.slug }
-           </option>`
-     ).join("\n") }
-     </select>
-     `;
+        let languages = config.projects.translations.concat(config.projects.current);
+        languages = languages.sort((a, b) => a.language.name.localeCompare(b.language.name));
 
-     const languageSelect = `
-     <select id="language_select">
-     ${ config.addons.flyout.translations.map(
-         (translation) => `
-         <option
-             value="${ translation.slug }"
-             ${ config.projects.current.language.code === translation.slug ? 'selected="selected"' : '' }
-             data-url="${ translation.url }">
-             ${ languageMapping[translation.slug] }
-         </option>`
-     ).join("\n") }
-     </select>
-     `;
+        const languageSelect = `
+        <select id="language_select">
+        ${ languages.map(
+            (translation) => `
+            <option
+                value="${ translation.slug }"
+                ${ config.projects.current.slug === translation.slug ? 'selected="selected"' : '' }
+                data-url="${ translation.urls.documentation }">
+                ${ translation.language.name }
+            </option>`
+        ).join("\n") }
+        </select>
+        `;
 
-    const selectVersionElement = document.querySelector("li.switchers div.version_switcher_placeholder");
-    selectVersionElement.innerHTML = versionSelect;
-    document.querySelector("li.switchers div.version_switcher_placeholder").addEventListener("change", onSwitch);
+        const selectVersionElement = document.querySelector("li.switchers div.version_switcher_placeholder");
+        selectVersionElement.innerHTML = versionSelect;
+        document.querySelector("li.switchers div.version_switcher_placeholder").addEventListener("change", onSwitch);
 
-    const selectLanguageElement = document.querySelector("li.switchers div.language_switcher_placeholder");
-    selectLanguageElement.innerHTML = languageSelect;
-    document.querySelector("li.switchers div.language_switcher_placeholder select").addEventListener("change", onSwitch);
+        const selectLanguageElement = document.querySelector("li.switchers div.language_switcher_placeholder");
+        selectLanguageElement.innerHTML = languageSelect;
+        document.querySelector("li.switchers div.language_switcher_placeholder select").addEventListener("change", onSwitch);
+     });
  });
 </script>
 {% endblock %}
