Doc: add hardcoded links to the official docs

--- a/Doc/tools/templates/layout.html
+++ b/Doc/tools/templates/layout.html
@@ -53,10 +53,35 @@
  document.addEventListener("readthedocs-addons-data-ready", function(event) {
      event.detail.initialize();
      event.detail.data().then((config) => {
-        // TODO: add `selected="selected"` to option
+        // Add some mocked hardcoded versions pointing to the official
+        // documentation while migrating to Read the Docs.
+        // These are only for testing purposes.
+        // TODO: remove them when managing all the versions on Read the Docs,
+        // since all the "active, built and not hidden" versions will be shown automatically.
+        let versions = config.versions.active.concat([
+            {
+                slug: "dev (3.13)",
+                urls: {
+                    documentation: "https://docs.python.org/3.13/",
+                }
+            },
+            {
+                slug: "3.12",
+                urls: {
+                    documentation: "https://docs.python.org/3.12/",
+                }
+            },
+            {
+                slug: "3.11",
+                urls: {
+                    documentation: "https://docs.python.org/3.11/",
+                }
+            },
+        ]);
+
         const versionSelect = `
         <select id="version_select">
-        ${ config.versions.active.map(
+        ${ versions.map(
             (version) => `
             <option
                 value="${ version.slug }"
