cleanup template comment

--- a/Doc/tools/templates/customlocaltoc.html
+++ b/Doc/tools/templates/customlocaltoc.html
@@ -1,9 +1,9 @@
 {#
 	Customization of sphinx's basic/localtoc.html
 
-	- Always display links to the parent pages within sections,
+	- When present, display links to the parent pages within sections,
 	  rather than link to the global contents
-	- 
+	- When parents are absent, display a link to the document root using the docstitle
 #}
 	<div>
   	<div>
