Address code review

--- a/Lib/profiling/sampling/flamegraph.css
+++ b/Lib/profiling/sampling/flamegraph.css
@@ -228,7 +228,7 @@ body {
 }
 
 .thread-filter-wrapper {
-  display: inline-flex;
+  display: none;
   align-items: center;
   margin-left: 16px;
   background: white;
