Link to the existing archives

--- a/Doc/tools/templates/download.html
+++ b/Doc/tools/templates/download.html
@@ -65,7 +65,10 @@ Python in one of various formats, follow one of links in this table.{% endtrans 
 <p>{% trans %}These archives contain all the content in the documentation.{% endtrans %}</p>
 
 <p>{% trans %}
-We no longer provide pre-built PDFs of the documentation.
+We no longer provide updates to the pre-built PDFs of the documentation.
+The previously-built archives are still available and may be of use:
+<a href="{{ dl_base }}/python-{{ dl_version }}-docs-pdf-a4.zip">PDF (.zip archive)</a>;
+<a href="{{ dl_base }}/python-{{ dl_version }}-docs-pdf-a4.tar.bz2">PDF (.tar.bz2 archive)</a>.
 To build a PDF archive, follow the instructions in the
 <a href="https://devguide.python.org/documentation/start-documenting/#building-the-documentation">Developer's Guide</a>
 and run <code>make dist-pdf</code> in the <code>Doc/</code> directory of a copy of the CPython repository.
