Link to the existing archives

--- a/Doc/tools/templates/download.html
+++ b/Doc/tools/templates/download.html
@@ -36,12 +36,17 @@ Python in one of various formats, follow one of links in this table.</p>
 
 <p>These archives contain all the content in the documentation.</p>
 
-<p>{% trans %}
-We no longer provide pre-built PDFs of the documentation.
+<p>
+We no longer provide updates to the pre-built PDFs of the documentation.
+The previously-built archives are still available and may be of use:
+<a href="{{ dlbase }}/python-{{ release }}-docs-pdf-a4.zip">A4 PDF (.zip archive)</a>;
+<a href="{{ dlbase }}/python-{{ release }}-docs-pdf-a4.tar.bz2">A4 PDF (.tar.bz2 archive)</a>;
+<a href="{{ dlbase }}/python-{{ release }}-docs-pdf-letter.zip">US-Letter PDF (.zip archive)</a>;
+<a href="{{ dlbase }}/python-{{ release }}-docs-pdf-letter.tar.bz2">US-Letter PDF (.tar.bz2 archive)</a>.
 To build a PDF archive, follow the instructions in the
 <a href="https://devguide.python.org/documentation/start-documenting/#building-the-documentation">Developer's Guide</a>
 and run <code>make dist-pdf</code> in the <code>Doc/</code> directory of a copy of the CPython repository.
-{% endtrans %}</p>
+</p>
 
 
 <h2>Unpacking</h2>
