Fix typo in download.html download instructions

--- a/Doc/tools/templates/download.html
+++ b/Doc/tools/templates/download.html
@@ -32,7 +32,7 @@
 {% if last_updated %}<p><b>{% trans %}Last updated on: {{ last_updated }}.{% endtrans %}</b></p>{% endif %}
 
 <p>{% trans %}To download an archive containing all the documents for this version of
-Python in one of various formats, follow one of links in this table.{% endtrans %}</p>
+Python in one of various formats, follow one of the links in this table.{% endtrans %}</p>
 
 <table class="docutils">
   <tr>
